fix the typography for the selected meal and added a clearBtn function

--- a/Recipe Finder/index.html
+++ b/Recipe Finder/index.html
@@ -16,7 +16,7 @@
         <button class="w-32 bg-red-600 rounded" id="clear">Clear</button>
     </div>
 
-    <main class="flex flex-grow bg-green-100" id="main">
+    <main class="flex flex-grow" id="main">
         <div id="recipesDisplay">
 
         </div>
