fix the typography for the selected meal and added a clearBtn function

--- a/Recipe Finder/index.html
+++ b/Recipe Finder/index.html
@@ -11,7 +11,7 @@
     </header>
 
     <div class="w-full flex flex-row p-2 gap-1 bg-gray-100">
-        <input type="text" placeholder="Recipe Name" id="recipeName" class="w-96 rounded">
+        <input type="text" placeholder="Recipe Name" id="recipeName" class="w-full rounded">
         <button class="bg-green-500 w-32 rounded" id="search">Search</button>
         <button class="w-32 bg-red-600 rounded" id="clear">Clear</button>
     </div>
