add the functionaly to display border and delete ui and also delete event listerner on keydown and btn click

--- a/Bookmark Manager/index.html
+++ b/Bookmark Manager/index.html
@@ -15,8 +15,8 @@
     <button class="bg-green-500 w-32 rounded font-mono text-white" id="bookmark">Bookmark</button>
 </div>
 
-<main class="flex flex-grow" id="main">
-    <div id="bookmarkDisplay">
+<main class="flex flex-grow px-2 py-1" id="main">
+    <div id="bookmarkDisplay" class="py-1 w-full">
 
     </div>
 </main>
