draft the UI design

--- a/Countdown Timer/index.html
+++ b/Countdown Timer/index.html
@@ -6,37 +6,37 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>Countdown Timer</title>
 </head>
-<body class="min-h-screen flex justify-center items-center flex-col">
+<body class="min-h-screen flex justify-center items-center flex-col" style="background-image: url('img/sdcscs.jpg');  background-size: cover;">
 
-<div class="w-1/2 h-12 bg-purple-200 rounded flex flex-col mb-2">
+<!--<div class="w-1/2 h-12 bg-purple-200 rounded flex flex-col mb-2">-->
 
-</div>
+<!--</div>-->
 
-<div class="w-1/2 h-72 bg-purple-200 rounded flex flex-col">
+<div class="w-1/2 h-72 bg-red-500 bg-opacity-20 rounded flex flex-col">
     <div class="w-full h-12 bg-red-600 flex justify-center items-center rounded">
             <p class="font-serif italic text-2xl text-white">Countdown Timer</p>
     </div>
 
     <div class="flex flex-grow flex-row justify-between items-center p-4">
-        <div class="w-32 h-32 bg-red-500 rounded flex justify-center items-center">
-            <p class="text-8xl font-mono">00</p>
-        </div>
+        <input class="w-32 h-32 bg-red-500 rounded flex justify-center items-center text-8xl font-mono text-center text-black hover:bg-opacity-30" placeholder="00">
+<!--            <p class="text-8xl font-mono">00</p>-->
+        </input>
 
         <div class="w-8 h-32 rounded flex justify-center items-center">
             <p class="text-8xl font-mono">:</p>
         </div>
 
-        <div class="w-32 h-32 bg-red-500 rounded flex  justify-center items-center">
-            <p class="text-8xl font-mono">00</p>
-        </div>
+        <input class="w-32 h-32 bg-red-500 rounded flex justify-center items-center text-8xl font-mono text-center text-black hover:bg-opacity-30" placeholder="00">
+        <!--            <p class="text-8xl font-mono">00</p>-->
+        </input>
 
         <div class="w-8 h-32 rounded flex justify-center items-center">
             <p class="text-8xl font-mono">:</p>
         </div>
 
-        <div class="w-32 h-32 bg-red-500 rounded flex justify-center items-center">
-            <p class="text-8xl font-mono">00</p>
-        </div>
+        <input class="w-32 h-32 bg-red-500 rounded flex justify-center items-center text-8xl font-mono text-center text-black hover:bg-opacity-30" placeholder="00">
+        <!--            <p class="text-8xl font-mono">00</p>-->
+        </input>
 
 
     </div>
