draft the UI design

--- a/Countdown Timer/index.html
+++ b/Countdown Timer/index.html
@@ -11,6 +11,7 @@
 <!--<div class="w-1/2 h-12 bg-purple-200 rounded flex flex-col mb-2">-->
 
 <!--</div>-->
+<p>FINISH MESSAGE</p>
 
 <div class="w-1/2 h-72 bg-red-500 bg-opacity-20 rounded flex flex-col">
     <div class="w-full h-12 bg-red-600 flex justify-center items-center rounded">
@@ -41,10 +42,24 @@
 
     </div>
 
-    <div class="w-full h-12 bg-red-600 flex justify-center items-center rounded">
+    <div class="w-full h-12 bg-red-600 flex justify-between items-center rounded p-4">
+        <button class="w-32 bg-white h-8 rounded bg-gray-400 text-center flex justify-center items-center text-2xl font-mono font-bold">
+            START
+        </button>
+
+        <button class="w-32 bg-white h-8 rounded bg-gray-400 text-center flex justify-center items-center text-2xl font-mono font-bold">
+            STOP
+        </button>
+
+        <button class="w-32 bg-white h-8 rounded bg-gray-400 text-center flex justify-center items-center text-2xl font-mono font-bold">
+            RESET
+        </button>
 
     </div>
 </div>
+
+<p>ERROR MESSAGE</p>
+
 
 
 <script src=""></script>
