--- a/Countdown Timer/index.html
+++ b/Countdown Timer/index.html
@@ -11,7 +11,7 @@
 <!--<div class="w-1/2 h-12 bg-purple-200 rounded flex flex-col mb-2">-->
 
 <!--</div>-->
-<p>FINISH MESSAGE</p>
+<!--<p>FINISH MESSAGE</p>-->
 
 <div class="w-1/2 h-72 bg-red-500 bg-opacity-20 rounded flex flex-col">
     <div class="w-full h-12 bg-red-600 flex justify-center items-center rounded">
