fix the UI to be mobile responsive

--- a/Countdown Timer/index.html
+++ b/Countdown Timer/index.html
@@ -13,13 +13,13 @@
 <!--</div>-->
 <!--<p>FINISH MESSAGE</p>-->
 
-<div class="w-1/2 h-72 bg-red-500 bg-opacity-20 rounded flex flex-col">
+<div class="lg:w-1/2 w-full h-72 bg-red-500 bg-opacity-20 rounded flex flex-col">
     <div class="w-full h-12 bg-red-600 flex justify-center items-center rounded">
             <p class="font-serif italic text-2xl text-white">Countdown Timer</p>
     </div>
 
     <div class="flex flex-grow flex-row justify-between items-center p-4">
-        <input id="hour" class="w-32 h-32 bg-red-500 rounded flex justify-center items-center text-8xl font-mono text-center text-black hover:bg-opacity-30" placeholder="00">
+        <input id="hour" class="w-24 lg:w-32 h-24 lg:h-32 bg-red-500 rounded flex justify-center items-center text-6xl lg:text-8xl font-mono text-center text-black hover:bg-opacity-30" placeholder="00">
 <!--            <p class="text-8xl font-mono">00</p>-->
         </input>
 
@@ -27,7 +27,7 @@
             <p class="text-8xl font-mono">:</p>
         </div>
 
-        <input id="minutes" class="w-32 h-32 bg-red-500 rounded flex justify-center items-center text-8xl font-mono text-center text-black hover:bg-opacity-30" placeholder="00">
+        <input id="minutes" class="w-24 lg:w-32 h-24 lg:h-32 bg-red-500 rounded flex justify-center items-center text-6xl lg:text-8xl font-mono text-center text-black hover:bg-opacity-30" placeholder="00">
         <!--            <p class="text-8xl font-mono">00</p>-->
         </input>
 
@@ -35,7 +35,7 @@
             <p class="text-8xl font-mono">:</p>
         </div>
 
-        <input id="seconds" class="w-32 h-32 bg-red-500 rounded flex justify-center items-center text-8xl font-mono text-center text-black hover:bg-opacity-30" placeholder="00">
+        <input id="seconds" class="w-24 lg:w-32 h-24 lg:h-32 bg-red-500 rounded flex justify-center items-center text-6xl lg:text-8xl font-mono text-center text-black hover:bg-opacity-30" placeholder="00">
         <!--            <p class="text-8xl font-mono">00</p>-->
         </input>
 
@@ -43,15 +43,15 @@
     </div>
 
     <div class="w-full h-12 bg-red-600 flex justify-between items-center rounded p-4">
-        <button id="start" class="w-32 bg-white h-8 rounded bg-gray-400 text-center flex justify-center items-center text-2xl font-mono font-bold">
+        <button id="start" class="lg:w-32 w-28 bg-white h-8 rounded bg-gray-400 text-center flex justify-center items-center text-2xl font-mono font-bold">
             START
         </button>
 
-        <button id="stop" class="w-32 bg-white h-8 rounded bg-gray-400 text-center flex justify-center items-center text-2xl font-mono font-bold">
+        <button id="stop" class="lg:w-32 w-28 bg-white h-8 rounded bg-gray-400 text-center flex justify-center items-center text-2xl font-mono font-bold">
             STOP
         </button>
 
-        <button id="reset" class="w-32 bg-white h-8 rounded bg-gray-400 text-center flex justify-center items-center text-2xl font-mono font-bold">
+        <button id="reset" class="lg:w-32 w-28 bg-white h-8 rounded bg-gray-400 text-center flex justify-center items-center text-2xl font-mono font-bold">
             RESET
         </button>
 
