--- a/Countdown Timer/index.html
+++ b/Countdown Timer/index.html
@@ -13,7 +13,7 @@
 <!--</div>-->
 <!--<p>FINISH MESSAGE</p>-->
 
-<div class="lg:w-1/2 w-full h-72 bg-red-500 bg-opacity-20 rounded flex flex-col">
+<div id="container" class="lg:w-1/2 w-full h-72 bg-red-500 bg-opacity-20 rounded flex flex-col">
     <div class="w-full h-12 bg-red-600 flex justify-center items-center rounded">
             <p class="font-serif italic text-2xl text-white">Countdown Timer</p>
     </div>
