get their respective ID's

--- a/Text To Speech/index.html
+++ b/Text To Speech/index.html
@@ -12,7 +12,7 @@
     Text To Speech
 </h1>
 
-<textarea class="w-96 h-90 bg-gray-200 rounded mt-4 text-black font-mono font-bold italic text-2xl" name="" id="usertext" placeholder="Type you text here...">
+<textarea class="w-96 h-90 bg-gray-200 rounded mt-4 text-black font-mono font-bold italic text-2xl" name="" id="user-text" placeholder="Type you text here...">
 </textarea>
 
 <div class="w-full flex justify-center items-center flex-col text-left mt-3">
