--- a/Text To Speech/index.html
+++ b/Text To Speech/index.html
@@ -17,13 +17,13 @@
 
 <div class="w-full flex justify-center items-center flex-col text-left mt-3">
     <div class="flex flex-col">
-        <label>Speed:</label>
-        <input type="range" class="w-96" min="0" max="100" value="50" id="speed-slider">
+        <label>Speed: <span id="speed-value">50</span></label>
+        <input type="range" class="w-96" min="0" max="10" value="50" id="speed-slider">
     </div>
     <br>
     <div class="flex flex-col">
-        <label>Pitch:</label>
-        <input type="range" class="w-96" min="0" max="100" value="50" id="pitch-slider">
+        <label>Pitch: <span id="pitch-value">50</span></label>
+        <input type="range" class="w-96" min="0" max="2" value="50" id="pitch-slider">
     </div>
 </div>
 
