--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
     <title>BMI Calculator</title>
 </head>
-<body>
+<body class="flex justify-start flex-col w-full h-screen bg-gray-200 p-4">
+    <div class="w-full h-96 rounded-md shadow-md">
+        <p class="h-24 text-3xl items-center flex text-left pl-4 font-bold font-sans bg-blue-500 text-white rounded-t-md">BMI CALCULATOR</p>
 
+        <div id="container" class="bg-red-500 h-48 w-full">
+            <div id="standard" class="bg-blue-900 h-48 w-full hidden">
+
+            </div>
+
+            <div id="metric" class="bg-green-900 h-48 w-full">
+
+            </div>
+        </div>
+
+        <div class="w-full h-24 bg-green-500">
+
+        </div>
+    </div>
 
 
 </body>
