--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -12,11 +12,15 @@
         <p class="h-24 text-3xl items-center flex text-left pl-4 font-bold font-sans bg-blue-500 text-white rounded-t-md">BMI CALCULATOR</p>
 
         <div id="container" class="bg-red-500 h-48 w-full">
-            <div id="standard" class="bg-blue-900 h-48 w-full hidden">
 
+            <div id="standard" class="bg-blue-900 h-48 w-full p-1">
+                <div class="w-3/4 h-10 flex flex-row justify-center align-center ml-2">
+                    <button class="w-1/2 bg-green-800 text-xl text-white rounded-l-md">Standard</button>
+                    <button class="w-1/2 bg-white text-xl rounded-r-md">Metric</button>
+                </div>
             </div>
 
-            <div id="metric" class="bg-green-900 h-48 w-full">
+            <div id="metric" class="bg-green-900 h-48 w-full hide">
 
             </div>
         </div>
