--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -11,19 +11,56 @@
     <div class="w-full h-96 rounded-md shadow-md">
         <p class="h-24 text-3xl items-center flex text-left pl-4 font-bold font-sans bg-blue-500 text-white rounded-t-md">BMI CALCULATOR</p>
 
-        <div id="container" class="bg-red-500 h-48 w-full">
+        <form id="container" class="bg-red-500 h-48 w-full">
 
             <div id="standard" class="bg-blue-900 h-48 w-full p-1">
                 <div class="w-3/4 h-10 flex flex-row justify-center align-center ml-2">
                     <button class="w-1/2 bg-green-800 text-xl text-white rounded-l-md">Standard</button>
                     <button class="w-1/2 bg-white text-xl rounded-r-md">Metric</button>
                 </div>
+
+                <div class="w-full mt-2 h-32 bg-emerald-500 flex flex-row justify-between items-center p-1">
+                    <div>
+                        <select id="feet" name="feet" class="border rounded p-1">
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                        </select>
+                        <label for="feet">Feet</label>
+                    </div>
+
+                    <div>
+                        <select id="inch" name="inch" class="border rounded p-1">
+                            <option value="0">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                            <option value="11">11</option>
+                        </select>
+                        <label for="inch">Inch</label>
+                    </div>
+
+                    <div>
+                        <input type="number" id="pounds" name="pounds" class="border rounded p-1 w-20">
+                        <label for="pounds">Pounds</label>
+                    </div>
+                </div>
             </div>
 
             <div id="metric" class="bg-green-900 h-48 w-full hide">
 
             </div>
-        </div>
+        </form>
 
         <div class="w-full h-24 bg-green-500">
 
