--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -11,12 +11,12 @@
     <div class="w-full h-96 rounded-md shadow-md">
         <p class="h-24 text-3xl items-center flex text-left pl-4 font-bold font-sans bg-blue-500 text-white rounded-t-md">BMI CALCULATOR</p>
 
-        <form id="container" class="bg-red-500 h-48 w-full">
+        <form id="form" class="bg-red-500 h-48 w-full">
 
-            <div id="standard" class="bg-blue-900 h-48 w-full p-1 hide">
+            <div id="standard-container" class="bg-blue-900 h-48 w-full p-1 hide">
                 <div class="w-full h-10 flex flex-row justify-center align-center">
-                    <button class="w-1/2 bg-green-800 text-xl text-white rounded-l-md">Standard</button>
-                    <button class="w-1/2 bg-white text-xl rounded-r-md">Metric</button>
+                    <button id="standard1-btn" class="w-1/2 bg-green-800 text-xl text-white rounded-l-md">Standard</button>
+                    <button id="metric1-btn" class="w-1/2 bg-white text-xl rounded-r-md">Metric</button>
                 </div>
 
                 <div class="w-full mt-2 h-32 bg-emerald-500 flex flex-row justify-center items-center p-1 gap-x-8">
@@ -59,10 +59,10 @@
 
 
 
-            <div id="metric" class="bg-green-900 h-48 w-full p-1">
+            <div id="metric-container" class="bg-green-900 h-48 w-full p-1">
                 <div class="w-full h-10 flex flex-row justify-center align-center">
-                    <button class="w-1/2 bg-white text-xl rounded-l-md">Standard</button>
-                    <button class="w-1/2 bg-green-800 text-xl rounded-r-md text-white">Metric</button>
+                    <button id="standard2-btn" class="w-1/2 bg-white text-xl rounded-l-md">Standard</button>
+                    <button id="metric2-btn" class="w-1/2 bg-green-800 text-xl rounded-r-md text-white">Metric</button>
                 </div>
 
                 <div class="w-full mt-2 h-32 bg-emerald-500 flex flex-row justify-center items-center p-1 gap-x-8">
@@ -86,6 +86,6 @@
         </div>
     </div>
 
-
+<script src="bmi.js"></script>
 </body>
 </html>
