--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -86,6 +86,23 @@
         </div>
     </div>
 
+    <div class="w-full h-96 rounded-md shadow-md bg-blue-300 mt-4">
+        <div class="w-full h-10 flex flex-row justify-center align-center">
+            <div class="w-full flex items-center p-2">
+                Your BMI is:
+            </div>
+
+            <div id="bmi-result" class="w-full">
+
+            </div>
+        </div>
+        <div class="w-full h-10"></div>
+        <div class="w-full h-10"></div>
+        <div class="w-full h-10"></div>
+        <div class="w-full h-10"></div>
+        <div class="w-full h-10"></div>
+    </div>
+
 <script src="bmi.js"></script>
 </body>
 </html>
