UI to display the BMI result

--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -86,9 +86,9 @@
         </div>
     </div>
 
-    <div class="w-full h-96 rounded-md shadow-md bg-blue-300 mt-4">
-        <div class="w-full h-10 flex flex-row justify-center align-center">
-            <div class="w-full flex items-center p-2">
+    <div class="w-full h-96 rounded-md shadow-sm bg-gray-300 mt-4">
+        <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray bg-blue-500 rounded-t-md">
+            <div class="w-full flex items-center p-2 font-serif font-bold">
                 Your BMI is:
             </div>
 
@@ -96,11 +96,59 @@
 
             </div>
         </div>
-        <div class="w-full h-10"></div>
-        <div class="w-full h-10"></div>
-        <div class="w-full h-10"></div>
-        <div class="w-full h-10"></div>
-        <div class="w-full h-10"></div>
+
+        <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray">
+            <div class="w-full flex items-center p-2 font-serif font-bold">
+                BMI Category
+            </div>
+
+            <div class="w-full flex items-center p-2 font-serif font-bold">
+                Category
+            </div>
+        </div>
+
+        <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray">
+            <div class="w-full flex items-center p-2 font-serif font-bold">
+                Underweight
+            </div>
+
+            <div class="w-full flex items-center p-2 font-serif">
+                Below 18.5
+            </div>
+        </div>
+
+
+        <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray">
+            <div class="w-full flex items-center p-2 font-serif font-bold">
+                Healthy
+            </div>
+
+            <div class="w-full flex items-center p-2 font-serif">
+                18.5 – 24.9
+            </div>
+        </div>
+
+
+        <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray">
+            <div class="w-full flex items-center p-2 font-serif font-bold">
+                Overweight
+            </div>
+
+            <div class="w-full flex items-center p-2 font-serif">
+                25.0 – 29.9
+            </div>
+        </div>
+
+
+        <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray rounded-b-md">
+            <div class="w-full flex items-center p-2 font-serif font-bold">
+                Obesity
+            </div>
+
+            <div class="w-full flex items-center p-2 font-serif">
+                30.0 or above
+            </div>
+        </div>
     </div>
 
 <script src="bmi.js"></script>
