--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -81,7 +81,7 @@
         </form>
 
         <div class="w-full h-24 bg-green-100 rounded-b-md flex justify-center items-center gap-x-4 text-white">
-            <button class="w-40 h-10 bg-emerald-500 rounded-full">Calculate BMI</button>
+            <button id="calculate-btn" class="w-40 h-10 bg-emerald-500 rounded-full">Calculate BMI</button>
             <button class="w-32 h-10 bg-emerald-900 rounded-full">Reset</button>
         </div>
     </div>
@@ -93,7 +93,7 @@
             </div>
 
             <div id="bmi-result" class="w-full">
-
+                0
             </div>
         </div>
 
