function and event listener to calculate metric

--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -92,8 +92,8 @@
                 Your BMI is:
             </div>
 
-            <div id="bmi-result" class="w-full">
-                0
+            <div id="bmi-result" class="w-full flex items-center p-2 font-serif font-bold">
+
             </div>
         </div>
 
