event listener to reset the data

--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -82,7 +82,7 @@
 
         <div class="w-full h-24 bg-green-100 rounded-b-md flex justify-center items-center gap-x-4 text-white">
             <button id="calculate-btn" class="w-40 h-10 bg-emerald-500 rounded-full">Calculate BMI</button>
-            <button class="w-32 h-10 bg-emerald-900 rounded-full">Reset</button>
+            <button id="reset-btn" class="w-32 h-10 bg-emerald-900 rounded-full">Reset</button>
         </div>
     </div>
 
