--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -151,8 +151,8 @@
         </div>
 
         <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray rounded-b-md">
-            <div class="w-full flex items-center p-2 font-serif font-bold">
-                Obesity
+            <div class="w-full flex items-center p-2 font-serif">
+                <a href="https://www.nhlbi.nih.gov/sites/default/files/media/docs/bmi_tbl.pdf" class="underline text-blue-800 text-md">View BMI Table</a>
             </div>
         </div>
     </div>
