respective block for bmi category will be highlighted

--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -107,7 +107,7 @@
             </div>
         </div>
 
-        <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray">
+        <div id="underweight" class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray">
             <div class="w-full flex items-center p-2 font-serif font-bold">
                 Underweight
             </div>
@@ -118,7 +118,7 @@
         </div>
 
 
-        <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray">
+        <div id="healthy" class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray">
             <div class="w-full flex items-center p-2 font-serif font-bold">
                 Healthy
             </div>
@@ -129,7 +129,7 @@
         </div>
 
 
-        <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray">
+        <div id="overweight" class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray">
             <div class="w-full flex items-center p-2 font-serif font-bold">
                 Overweight
             </div>
@@ -140,7 +140,7 @@
         </div>
 
 
-        <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray rounded-b-md">
+        <div id="obese" class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray rounded-b-md">
             <div class="w-full flex items-center p-2 font-serif font-bold">
                 Obesity
             </div>
