respective block for bmi category will be highlighted accordingly

--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -86,7 +86,7 @@
         </div>
     </div>
 
-    <div class="w-full h-70 rounded-md shadow-sm bg-gray-300 mt-2">
+    <div class="w-full h-70 rounded-md shadow-sm mt-2">
         <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray bg-blue-500 rounded-t-md">
             <div class="w-full flex items-center p-2 font-serif font-bold">
                 Your BMI is:
@@ -97,7 +97,7 @@
             </div>
         </div>
 
-        <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray">
+        <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 bg-gray-300 border-gray">
             <div class="w-full flex items-center p-2 font-serif font-bold">
                 BMI Category
             </div>
@@ -107,7 +107,7 @@
             </div>
         </div>
 
-        <div id="underweight" class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray">
+        <div id="underweight" class="w-full h-10 flex flex-row justify-center align-center border-b-2 bg-gray-300 border-gray">
             <div class="w-full flex items-center p-2 font-serif font-bold">
                 Underweight
             </div>
@@ -118,7 +118,7 @@
         </div>
 
 
-        <div id="healthy" class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray">
+        <div id="healthy" class="w-full h-10 flex flex-row justify-center align-center border-b-2 bg-gray-300 border-gray">
             <div class="w-full flex items-center p-2 font-serif font-bold">
                 Healthy
             </div>
@@ -129,7 +129,7 @@
         </div>
 
 
-        <div id="overweight" class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray">
+        <div id="overweight" class="w-full h-10 flex flex-row justify-center align-center border-b-2 bg-gray-300 border-gray">
             <div class="w-full flex items-center p-2 font-serif font-bold">
                 Overweight
             </div>
@@ -140,7 +140,7 @@
         </div>
 
 
-        <div id="obese" class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray rounded-b-md">
+        <div id="obese" class="w-full h-10 flex flex-row justify-center align-center border-b-2 bg-gray-300 border-gray rounded-b-md">
             <div class="w-full flex items-center p-2 font-serif font-bold">
                 Obesity
             </div>
@@ -150,7 +150,7 @@
             </div>
         </div>
 
-        <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 border-gray rounded-b-md">
+        <div class="w-full h-10 flex flex-row justify-center align-center border-b-2 bg-gray-300 border-gray rounded-b-md">
             <div class="w-full flex items-center p-2 font-serif">
                 <a href="https://www.nhlbi.nih.gov/sites/default/files/media/docs/bmi_tbl.pdf" class="underline text-blue-800 text-md">View BMI Table</a>
             </div>
