fix the ui to make it look more clean

--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -13,13 +13,13 @@
 
         <form id="form" class="h-32 w-full">
 
-            <div id="standard-container" class="bg-blue-900 h-32 w-full p-1 hide">
+            <div id="standard-container" class=" h-32 w-full p-1 hide">
                 <div class="w-full h-10 flex flex-row justify-center align-center">
                     <button id="standard1-btn" class="w-1/2 bg-green-800 text-xl text-white rounded-l-md">Standard</button>
                     <button id="metric1-btn" class="w-1/2 bg-white text-xl rounded-r-md">Metric</button>
                 </div>
 
-                <div class="w-full mt-2 h-24 bg-emerald-500 flex flex-row justify-center items-center p-1 gap-x-8">
+                <div class="w-full mt-2 h-24 flex flex-row justify-center items-center p-1 gap-x-8 border-b border-white">
                     <div>
                         <select id="feet" name="feet" class="border rounded p-1">
                             <option value="3">3</option>
