--- a/Speech to text/index.html
+++ b/Speech to text/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="speech.css">
     <title>Speech to text</title>
 </head>
-<body>
+<body class="bg-gray-100 flex flex-col h-screen">
+    <header class="w-full h-20 bg-emerald-500 flex justify-center items-center text-white font-serif text-4xl">Speech To Text</header>
 
+    <div class="flex flex-grow w-full h-auto justify-center items-center px-2">
+        <div class="w-full h-96 bg-white border-2 border-gray-400 rounded-lg p-2">
+            <button class="bg-gray-200 text-2xl p-2 border-2 border-gray-300 rounded-lg mb-2 mt-2">START</button>
+            <div class="w-full h-72 rounded-lg bg-gray-200 border-2 border-gray-400"></div>
+        </div>
+    </div>
 </body>
 </html>
