test the speech connection

--- a/Speech to text/index.html
+++ b/Speech to text/index.html
@@ -16,5 +16,7 @@
             <div class="w-full h-72 rounded-lg bg-gray-200 border-2 border-gray-400"></div>
         </div>
     </div>
+
+<script src="textToSpeech.js"></script>
 </body>
 </html>
