extract the recorded words from the transcript

--- a/Speech to text/index.html
+++ b/Speech to text/index.html
@@ -12,7 +12,10 @@
 
     <div class="flex flex-grow w-full h-auto justify-center items-center px-2">
         <div class="w-full h-96 bg-white border-2 border-gray-400 rounded-lg p-2">
-            <button id="start-btn" class="bg-gray-200 text-2xl p-2 border-2 border-gray-300 rounded-lg mb-2 mt-2">START</button>
+            <div>
+                <button id="start-btn" class="bg-gray-200 text-2xl p-2 border-2 border-gray-300 rounded-lg mb-2 mt-2">START</button>
+                <button id="stop-btn" class="bg-gray-200 text-2xl p-2 border-2 border-gray-300 rounded-lg mb-2 mt-2">STOP</button>
+            </div>
             <div id="resultDisplay" class="w-full h-72 rounded-lg bg-gray-200 border-2 border-gray-400"></div>
         </div>
     </div>
