--- a/Speech to text/index.html
+++ b/Speech to text/index.html
@@ -14,9 +14,9 @@
         <div class="w-full h-96 bg-white border-2 border-gray-400 rounded-lg p-2">
             <div>
                 <button id="start-btn" class="bg-gray-200 text-2xl p-2 border-2 border-gray-300 rounded-lg mb-2 mt-2">START</button>
-                <button id="stop-btn" class="bg-gray-200 text-2xl p-2 border-2 border-gray-300 rounded-lg mb-2 mt-2">STOP</button>
+                <button id="stop-btn" class="bg-red-500 text-white text-2xl p-2 border-2 border-gray-300 rounded-lg mb-2 mt-2">STOP</button>
             </div>
-            <div id="resultDisplay" class="w-full h-72 rounded-lg bg-gray-200 border-2 border-gray-400"></div>
+            <div id="resultDisplay" class="w-full h-72 rounded-lg bg-gray-200 border-2 border-gray-400 p-2 text-xl font-serif font-bold"></div>
         </div>
     </div>
 
