--- a/Number Guessing/index.html
+++ b/Number Guessing/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="index.css.css">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body class="flex flex-col h-screen">
