--- a/Number Guessing/index.html
+++ b/Number Guessing/index.html
@@ -13,8 +13,15 @@
     <main class="bg-black flex-grow flex justify-center items-center">
         <div class="bg-gray-200 w-96 h-96 rounded-lg border-2 border-yellow-500 flex flex-col">
             <div class="bg-emerald-500 w-full h-32 flex flex-col justify-center items-center rounded-t-lg">
-                <input id="input" placeholder="Guess number..." class="h-10 rounded p-2 text-xl">
-                <button id="guess-btn" class="bg-yellow-500 h-10 p-2 text-xl mt-4 rounded-lg flex justify-center items-center border-2 border-gray-200 text-white font-mono">Guess Number</button>
+                <div class="flex flex-row justify-center gap-2 w-full">
+                    <input id="input" placeholder="Guess number..." class="h-10 rounded p-2 text-xl">
+                    <div id="life" class="bg-white w-20 flex justify-center items-center font-mono text-md font-bold rounded">Life: 3</div>
+                </div>
+
+                <div class="flex flex-row justify-center gap-2 w-full">
+                    <button id="guess-btn" class="bg-yellow-500 h-10 p-2 text-xl mt-4 rounded-lg flex justify-center items-center border-2 border-gray-200 text-white font-mono">Guess Number</button>
+                    <button id="reset-btn" class="bg-yellow-500 h-10 p-2 text-xl mt-4 rounded-lg flex justify-center items-center border-2 border-gray-200 text-white font-mono">Reset</button>
+                </div>
             </div>
 
             <div class="bg-red-500 flex flex-grow flex-col rounded-b-lg">
