fix the validation on generate function

--- a/Number Guessing/index.html
+++ b/Number Guessing/index.html
@@ -29,7 +29,7 @@
                     <div id="random-num" class="w-80 h-28 bg-green-200 text-8xl flex justify-center items-center font-mono">0</div>
                 </div>
 
-                <div id="result" class="flex flex-grow bg-white flex justify-center items-center text-3xl font-mono">
+                <div id="result" class="flex flex-grow bg-white flex justify-center items-center text-3xl font-mono text-center">
                     result
                 </div>
             </div>
