--- a/Number Guessing/index.html
+++ b/Number Guessing/index.html
@@ -26,7 +26,7 @@
 
             <div class="bg-red-500 flex flex-grow flex-col rounded-b-lg">
                 <div class="bg-blue-500 h-40 flex  justify-center items-center">
-                    <div id="random-num" class="w-80 h-28 bg-green-200 text-8xl flex justify-center items-center font-mono">0</div>
+                    <div id="random-num" class="w-80 h-28 bg-green-200 text-8xl flex justify-center items-center font-mono">🔐</div>
                 </div>
 
                 <div id="result" class="flex flex-grow bg-white flex justify-center items-center text-3xl font-mono text-center">
