--- a/Pomodoro Timer/index.html
+++ b/Pomodoro Timer/index.html
@@ -7,7 +7,25 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body class="w-full h-screen flex flex-col justify-start items-center bg-red-800">
+<body class="w-full h-screen flex flex-col justify-center items-center bg-red-800 px-6 py-30">
+
+    <div class="w-full h-96 bg-black rounded-lg flex flex-col">
+        <div class="w-full flex-1 flex flex-row justify-center items-end gap-4 pb-4">
+            <button id="focus-btn" class="bg-red-500 p-2 px-6 rounded text-white">Focus</button>
+            <button id="shortBreak-btn" class="bg-gray-500 p-2 px-6 rounded text-gray-200">Short Break</button>
+            <button id="longBreak-btn" class="bg-gray-500 p-2 px-6 rounded text-gray-200">Long Break</button>
+        </div>
+
+        <div id="time" class="w-full flex-1 flex justify-center items-center text-white font-bold text-9xl">
+            25:00
+        </div>
+
+        <div class="w-full flex-1 flex justify-center items-center flex-row gap-3 pb-7">
+            <button class="bg-white p-3 px-6 rounded font-bold">START</button>
+            <button class="bg-gray-500 text-gray-200 p-3 px-6 rounded font-bold">PAUSE</button>
+            <button class="bg-gray-500 text-gray-200 p-3 px-6 rounded font-bold">RESET</button>
+        </div>
+    </div>
 
 </body>
 </html>
