reset the time left to original state

--- a/Pomodoro Timer/index.html
+++ b/Pomodoro Timer/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="w-full h-screen flex flex-col justify-center items-center bg-red-800 px-3 py-30">
 
-    <div class="w-full lg:w-1/2 md:w-3/4 sm:w-full h-96 bg-black rounded-lg flex flex-col">
+    <div class="w-full lg:w-1/2 md:w-3/4 h-96 bg-black rounded-lg flex flex-col">
         <div class="w-full flex-1 flex flex-row justify-center items-end gap-4 pb-4">
             <button id="focus-btn" class="bg-gray-500 p-2 px-6 rounded text-white">Focus</button>
             <button id="shortBreak-btn" class="bg-gray-500 p-2 px-6 rounded text-gray-200">Short Break</button>
