initial UI design for the project

--- a/Random Password/index.html
+++ b/Random Password/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="w-full flex-1 flex justify-center items-start">
-        <p id="result" class="text-3xl w-full text-center">hsdf</p>
+        <p id="result" class="text-3xl w-full text-center"></p>
     </div>
 </div>
 
