--- a/Expense Tracker/index.html
+++ b/Expense Tracker/index.html
@@ -6,8 +6,39 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Document</title>
 </head>
-<body class="w-full h-screen flex flex-col bg-black px-4 py-30">
+<body class="w-full h-screen flex flex-col px-4">
+    <div class="w-full h-32 flex justify-center items-end text-5xl italic font-bold font-serif">
+        Expense Tracker
+    </div>
 
+    <div class="w-full h-24 flex justify-center items-center flex-row gap-20">
+        <input placeholder="Expense name" class="border-2 border-black rounded">
+        <input placeholder="Amount" class="border-2 border-black rounded">
+
+        <select name="fruits" id="fruits" class="border-2 border-black rounded">
+            <option value="apple">Apple</option>
+            <option value="banana">Banana</option>
+            <option value="orange">Orange</option>
+            <option value="category" selected>Select Category</option>
+        </select>
+
+        <input type="date" class="border-2 border-black rounded">
+
+        <button class="bg-green-600 px-8 py-1 rounded">ADD</button>
+    </div>
+
+    <div class="w-full">
+        <table class="w-full table-fixed border-collapse">
+            <thead class="bg-gray-500 text-white font-mono">
+                <tr>
+                    <th class="w-1/3 border">Expense</th>
+                    <th class="w-1/3 border">Amount</th>
+                    <th class="w-1/3 border">Category</th>
+                    <th class="w-1/3 border">Date</th>
+                </tr>
+            </thead>
+        </table>
+    </div>
 
 
 <script src="index.js"></script>
