initial UI design

--- a/Expense Tracker/index.html
+++ b/Expense Tracker/index.html
@@ -16,9 +16,9 @@
         <input placeholder="Amount" class="border-2 border-black rounded">
 
         <select name="fruits" id="fruits" class="border-2 border-black rounded">
-            <option value="apple">Apple</option>
-            <option value="banana">Banana</option>
-            <option value="orange">Orange</option>
+            <option value="apple">Food</option>
+            <option value="banana">Transpo</option>
+            <option value="orange">Electricity</option>
             <option value="category" selected>Select Category</option>
         </select>
 
