--- a/Expense Tracker/index.html
+++ b/Expense Tracker/index.html
@@ -15,16 +15,16 @@
         <input id="expense" placeholder="Expense name" class="border-2 border-black rounded">
         <input id="amount" placeholder="Amount" class="border-2 border-black rounded">
 
-        <select id="category" name="fruits" id="fruits" class="border-2 border-black rounded">
+        <select id="category" name="category"  class="border-2 border-black rounded">
             <option id="food" data-type="food" value="apple">Food</option>
             <option id="transpo" data-type="transpo" value="banana">Transpo</option>
             <option id="electricity" data-type="electricity" value="orange">Electricity</option>
             <option value="category" selected disabled hidden>Select Category</option>
         </select>
 
-        <input type="date" class="border-2 border-black rounded">
+        <input id="date" type="date" class="border-2 border-black rounded">
 
-        <button class="bg-green-600 px-8 py-1 rounded">ADD</button>
+        <button id="add-btn" class="bg-green-600 px-8 py-1 rounded">ADD</button>
     </div>
 
     <div class="w-full">
