render UI to stay permanent on page reload

--- a/Expense Tracker/index.html
+++ b/Expense Tracker/index.html
@@ -24,7 +24,7 @@
 
         <input id="date" type="date" class="border-2 border-black rounded">
 
-        <button id="add-btn" type="button" class="bg-green-600 px-8 py-1 rounded">ADD</button>
+        <button id="add-btn" type="button" class="bg-green-600 px-8 py-1 rounded text-white">ADD</button>
     </form>
 
     <div class="w-full">
