render UI to be mobile friendly

--- a/Expense Tracker/index.html
+++ b/Expense Tracker/index.html
@@ -6,12 +6,12 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Document</title>
 </head>
-<body class="w-full h-screen flex flex-col px-4">
-    <div class="w-full h-32 flex justify-center items-end text-5xl italic font-bold font-serif">
+<body class="w-full h-screen flex flex-col lg:px-4">
+    <div class="w-full h-32 flex justify-center text-center items-center lg:items-end text-5xl italic font-bold font-serif">
         Expense Tracker
     </div>
 
-    <form id="form" class="w-full h-24 flex justify-center items-center flex-row gap-20">
+    <form id="form" class="w-full h-52 flex-col gap-2 lg:h-24 flex justify-center items-center lg:flex-row lg:gap-20">
         <input id="expense-name" placeholder="Expense name" class="border-2 border-black rounded">
         <input id="amount" placeholder="Amount" class="border-2 border-black rounded">
 
