--- a/Local Storage CRUD App/index.html
+++ b/Local Storage CRUD App/index.html
@@ -12,14 +12,47 @@
         CRUD Application With Local Storage
     </div>
 
-    <form class="w-full h-52 grid grid-cols-2 gap-3">
-        <input placeholder="Name" class="border-2 border-gray-300 rounded-md bg-gray-200" type="text">
-        <input placeholder="Name" class="border-2 border-gray-300 rounded-md" type="text">
-        <input placeholder="Name" class="border-2 border-gray-300 rounded-md" type="text">
-        <input placeholder="Name" class="border-2 border-gray-300 rounded-md" type="text">
-        <button class="col-span-2 bg-black text-white p-2">
+    <form class="w-full h-52 grid grid-cols-2 gap-2">
+        <div class="flex flex-col pr-4">
+            <label class="text-white">Name</label>
+            <input placeholder="Enter Name" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="text">
+        </div>
+
+        <div class="flex flex-col pr-4">
+            <label class="text-white">Age</label>
+            <input placeholder="Enter Age" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="number">
+        </div>
+
+        <div class="flex flex-col pr-4">
+            <label class="text-white">Address</label>
+            <input placeholder="Enter Address" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="text">
+        </div>
+
+        <div class="flex flex-col pr-4">
+            <label class="text-white">Email</label>
+            <input placeholder="Enter Email" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="email">
+        </div>
+
+        <button class="col-span-2 bg-black text-white p-2 mr-4 rounded-md text-xl font-semibold">
             ADD
         </button>
     </form>
+
+    <div class="w-full pr-4 mt-4">
+        <table class="w-full table-fixed border-collapse">
+            <thead class="bg-gray-900 text-white font-mono">
+            <tr>
+                <th class="w-1/3 border">Name</th>
+                <th class="w-24 border">Age</th>
+                <th class="w-1/3 border">Address</th>
+                <th class="w-1/3 border">Email</th>
+                <th class="w-1/3 border">Actions</th>
+            </tr>
+            </thead>
+            <tbody id="expenses-list">
+
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
