--- a/Local Storage CRUD App/index.html
+++ b/Local Storage CRUD App/index.html
@@ -12,28 +12,28 @@
         CRUD Application With Local Storage
     </div>
 
-    <form class="w-full h-52 grid grid-cols-2 gap-2">
+    <form id="form" class="w-full h-52 grid grid-cols-2 gap-2">
         <div class="flex flex-col pr-4">
             <label class="text-white">Name</label>
-            <input placeholder="Enter Name" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="text">
+            <input id="name" placeholder="Enter Name" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="text">
         </div>
 
         <div class="flex flex-col pr-4">
             <label class="text-white">Age</label>
-            <input placeholder="Enter Age" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="number">
+            <input id="age" placeholder="Enter Age" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="number">
         </div>
 
         <div class="flex flex-col pr-4">
             <label class="text-white">Address</label>
-            <input placeholder="Enter Address" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="text">
+            <input id="address" placeholder="Enter Address" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="text">
         </div>
 
         <div class="flex flex-col pr-4">
             <label class="text-white">Email</label>
-            <input placeholder="Enter Email" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="email">
+            <input id="email" placeholder="Enter Email" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="email">
         </div>
 
-        <button class="col-span-2 bg-black text-white p-2 mr-4 rounded-md text-xl font-semibold">
+        <button id="add" class="col-span-2 bg-black text-white p-2 mr-4 rounded-md text-xl font-semibold">
             ADD
         </button>
     </form>
@@ -49,10 +49,12 @@
                 <th class="w-1/3 border">Actions</th>
             </tr>
             </thead>
-            <tbody id="expenses-list">
+            <tbody id="data-list">
 
             </tbody>
         </table>
     </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
